<resources>
    <string name="app_name" translatable="false">Yahtzee</string>
    <string name="signpost" translatable="false">   </string>
    <string name="toast_ones">Sums all dices with 1.</string>
    <string name="toast_twos">Sums all dices with 2.</string>
    <string name="toast_threes">Sums all dices with 3.</string>
    <string name="toast_fours">Sums all dices with 4.</string>
    <string name="toast_fives">Sums all dices with 5.</string>
    <string name="toast_sixs">Sums all dices with 6.</string>
    <string name="toast_tris">With 3 of a kind, sums all dices.</string>
    <string name="toast_poker">With 4 of a kind, sums all dices.</string>
    <string name="toast_full">3 of a kind + 2 of a kind; gives 25 points.</string>
    <string name="toast_small_straight">4 consecutive dices; gives 30 points.</string>
    <string name="toast_large_straight">5 consecutive dices; gives 40 points.</string>
    <string name="toast_yahtzee">5 dices of a kind; gives 50 points!</string>
    <string name="toast_chance">Sums all dices.</string>
    <string name="roll">Roll!</string>
    <string name="throws_left">Throws left</string>
    <string name="choose_combination">Choose a combination.</string>
    <string name="confirm">Confirm</string>
    <string name="total">Total: </string>
    <string name="end">End game!</string>
    <string name="bonus" translatable="false">BONUS +35</string>
    <string name="bonus_max" translatable="false">/63</string>
    <string name="vs" translatable="false">VS</string>
    <string name="insert_name">Please, insert player name!</string>
    <string name="player">Player: </string>
    <string name="leave">Leave</string>
    <string name="wanna_leave">Do you want to quit the game?</string>
    <string name="result_not_saved">(The result will not be saved.)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_end">The end!</string>
    <string name="end_message">The game has ended!</string>
    <string name="result_saved">The result will be saved.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="tie">Tie</string>
    <string name="history">Games history</string>
    <string name="no_result">No result saved</string>
    <string name="touch_for_details">Touch on a result to know its details</string>
    <string name="single_player">Singleplayer</string>
    <string name="hint_name">Insert player\'s name...</string>
    <string name="vs_mode">VS Mode</string>
    <string name="rules">Rules</string>
    <string name="game_detail">Game detail</string>
    <string name="opp">Opp. </string>
    <string name="p_ones">Dices with 1: </string>
    <string name="p_twos">Dices with 2: </string>
    <string name="p_threes">Dices with 3: </string>
    <string name="p_fours">Dices with 4: </string>
    <string name="p_fives">Dices with 5: </string>
    <string name="p_sixs">Dices with 6: </string>
    <string name="p_tris">3 of a kind: </string>
    <string name="p_poker">4 of a kind: </string>
    <string name="p_full">Full: </string>
    <string name="p_small">Small straight: </string>
    <string name="p_large">Large straight: </string>
    <string name="p_yahtzee">Yahtzee: </string>
    <string name="p_chance">Chance: </string>
    <string name="p_total">Total: </string>
    <string name="game_rules">Game rules</string>
    <string name="rules_text"><i><b>Yahtzee</b></i> is a strategy game played with 5 dices. It can be played in single trying to reach the best score or against one or more opponents.\n\nThere are different combinations that can be realized by the players throwing the dices. When the combination is obtained, the player gains points depending on the combination. A combination can\'t be repeated, so the game ends after 13 turns of dice throws, even if not every combination has been realized.\n\nAt each turn, the player can throw the dices for three times. At the first throw, the player throws all dices, while in the two following throws the player can choose to keep one or more favorable dices to obtain the desired combination. The player can also choose not to keep any dice or use following throws, in case, for example, a good combination has already been realized. At the end of the three throws, the player must sign a point in one of the unused boxes of the scorekeeper. If at the end of a turn one of the possible unused combinations isn\'t realized, the player must sign "0" (zero) in one of the unused boxes.\n\nThe player with the higher total of points at the end of the game is the winner.\n\n<i>Combinations:</i>\n<b> - Equal dices with 1</b> (score given by the sum of all dices with 1): it can be obtained when at least one dice is 1. The score is the sum of the dices with 1. For example: 1-3-4-6-1 gives 2 points.\n<b> - Equal dices with 2</b> (score given by the sum of all dices with 2): it can be obtained when at least one dice is 2. The score is the sum of the dices with 2. For example: 2-1-2-2-5 gives 6 points.\n<b> - Equal dices with 3</b> (score given by the sum of all dices with 3): it can be obtained when at least one dice is 3. The score is the sum of the dices with 3. For example: 3-1-3-4-3 gives 9 points.\n<b> - Equal dices with 4</b> (score given by the sum of all dices with 4): it can be obtained when at least one dice is 4. The score is the sum of the dices with 4. For example: 4-1-2-2-1 gives 4 points.\n<b> - Equal dices with 5</b> (score given by the sum of all dices with 5): it can be obtained when at least one dice is 5. The score is the sum of the dices with 5. For example: 5-1-5-5-2 gives 15 points.\n<b> - Equal dices with 6</b> (score given by the sum of all dices with 6): it can be obtained when at least one dice is 6. The score is the sum of the dices with 6. For example: 6-3-2-6-1 gives 12 points.\n<b> - Bonus</b> (35 points): it can be obtained when the sum of the scores of all 6 previous combinations exceeds or reaches 63.\n<b> - 3 of a kind</b> (score given by the sum of all dices): when 3 out of 5 dices are equal. For example 3-3-3-5-2.\n<b> - 4 of a kind</b> (score given by the sum of all dices): when 4 out of 5 dices are equal. For example 5-5-5-5-1.\n<b> - Full</b> (25 points): same as the poker combination, with 3 dices of one kind and 2 of another. For example 4-4-4-1-1.\n<b> - Small Straight</b> (30 points): when 4 dices are sorted in increasing order (1-2-3-4 or 2-3-4-5 or 3-4-5-6).\n<b> - Large Straight</b> (40 points): when 5 dices are sorted in increasing order (1-2-3-4-5 or 2-3-4-5-6).\n<b> - Yahtzee</b> (50 points): when all 5 dices are equal. For example 1-1-1-1-1 or 4-4-4-4-4. If Yahtzee is repeated, it can be inserted in another free combination together with the score relating to it.\n<b> - Chance</b> (score given by the sum of all 5 dices): any combination obtained. It\'s a chance to exploit when none of the previous combinations is realized, or if the realized combination has already been realized previously. This combination can be used only once too.\n\n</string>
    <string name="look_opponent">Find an opponent</string>
    <string name="wait_opponent">Wait for an opponent</string>
    <string name="p_bonus_obtained">/63 -> Bonus obtained</string>
    <string name="p_bonus_not_obtained">/63 -> Bonus not obtained</string>
    <string name="you_win">Congratulations! You win the game!</string>
    <string name="you_lose">Too bad... You lose the game.</string>
    <string name="its_a_tie">It\'s a tie! Good for both of you!</string>
    <string name="wait_opp_to_end">Wait! Your opponent is still playing!</string>
    <string name="opponent_turn">Opponent\'s\nturn...</string>
    <string name="conn_failed">Conection failed</string>
    <string name="connected">Connected</string>
    <string name="supported_bt">Bluetooth not supported</string>
    <string name="enabled_bt">Bluetooth already enabled</string>
    <string name="device_finding">Finding device...</string>
</resources>